--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -55,7 +55,7 @@
 
     <div id="root"></div>
 
-    
+    <div id="modal-root"></div>
     <!--<script src="js/jquery.js"></script>    -->
 
     <script src="layout/js/jquery-1.8.3.min.js"></script>
